--- a/Client/BlazorApp/Components/Pages/Home.razor
+++ b/Client/BlazorApp/Components/Pages/Home.razor
@@ -1,7 +1,25 @@
 ﻿@page "/"
+@rendermode InteractiveServer
+@inject AuthenticationStateProvider AuthStateProvider
+@inject NavigationManager NavMgr
+<PageTitle>Home</PageTitle>
 
-<PageTitle>Profile</PageTitle>
+<h1>Reddit Clone</h1>
+<AuthorizeView>
+    <Authorized>
+        <h3>Hello, @context.User.Identity.Name</h3>
+        Here you can browse interesting posts. 
+        <button @onclick='Logout'>Logout</button>
+    </Authorized>
+    <NotAuthorized>
+         lol you are not logged in!
+         <button @onclick='() => NavMgr.NavigateTo("login")'>go to login</button>
+    </NotAuthorized>
+</AuthorizeView> 
 
-<h1>You are not logged in :))</h1>
+@code {
 
-Welcome to your new app.
+    private void Logout() {
+        ((SimpleAuthProvider)AuthStateProvider).Logout();
+    }
+}
